k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sales-tracking
  labels:
    name: sales-tracking
    environment: production
